fix: catalogue header overlap layout alignment

--- a/style.css
+++ b/style.css
@@ -1540,7 +1540,7 @@ a {
 .cat-card {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 58%;
   width: 420px;
   height: 220px;
   margin-left: -210px;
